--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
 
     </div>
 
-    <script src="js/My Home.js"></script>
+    <script src="js/home.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
