--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
 
             <div class="col">
                 <div class="card product-card p-2">
-                    <img src="../project-4/image/ring 1.jpg" class="card-img-top product-img" alt="Jewelry">
+                    <img src="image/ring-1.jpg" class="card-img-top product-img" alt="Jewelry">
                     <div class="card-body px-0 pb-0">
                         <h6 class="fw-bold text-uppercase">Radiant Halo Ring</h6>
                         <p class="mb-1 fw-medium">Price: <span class=" text-dark">$1,200</span></p>
@@ -87,7 +87,7 @@
 
     </div>
 
-    <script src="js/home.js"></script>
+    <script src="JS/home.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
