--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="col">
             <div class="card product-card p-2">
-                <img src="image/ring-1.jpg" class="card-img-top product-img" alt="Jewelry">
+                <img src="image/ring1.jpg" class="card-img-top product-img" alt="Jewelry">
                 <div class="card-body px-0 pb-0  ">
                     <h5 class="card-title ">Radiant Halo Ring</h5>
                     <p class=" text-muted mb-1">Price: <span class=" text-dark">$1,200</span></p>
@@ -197,7 +197,7 @@
 
 
     <script src="js/bootstrap.min.js"></script>
-    <script src="JS/index.js"></script>
+    <script src="js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
